angular material theming

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
 <button color="warn" mat-flat-button> warn</button>
 <button color="error" mat-flat-button> error</button>
 
+hahahahahah
+
+
 <router-outlet></router-outlet>
 
 
