--- a/src/app/scss/_variables.scss
+++ b/src/app/scss/_variables.scss
@@ -1,31 +1,33 @@
 // FONT SIZES // -------------------------------------------------------------- //
 
-$title_biggest_font_size: 3rem;
-$h1_font_size: 2.25rem;
-$h2_font_size: 1.5rem;
-$h3_font_size: 1.25rem;
-$normal_text_font_size: 1.125rem;
-$small_text_font_size: 0.875rem;
-$smallest_text_font_size: 0.75rem;
+$title: 3rem;
+$header: 2.5rem;
+$normal_text_size: 1.6rem;
+$small_text_size: 1.2rem;
+$smallest_text_size: 1rem;
 
 // MARGIN + PADDING // ------------------------------------------------------- //
 
-$margin_1: 0.5rem;
-$margin_2: 0.6rem;
-$margin_3: 1rem;
-$margin_4: 1.5rem;
-$margin_5: 2rem;
-$margin_6: 2.5rem;
-$margin_7: 3rem;
+$m0_5: 0.5rem;
+$m0_75: 0.75rem;
+$m1: 1rem;
+$m1_5: 1.5rem;
+$m2: 2rem;
+$m3: 3rem;
+$m4: 4rem;
+$m5: 5rem;
+$m6: 6rem;
 
-$padding_1: 0.5rem;
-$padding_2: 0.6rem;
-$padding_3: 1rem;
-$padding_4: 1.5rem;
-$padding_5: 2rem;
-$padding_6: 2.5rem;
-$padding_7: 3rem;
+$p0_5: 0.5rem;
+$p0_75: 0.75rem;
+$p1: 1rem;
+$p1_5: 1.5rem;
+$p2: 2rem;
+$p3: 3rem;
+$p4: 4rem;
+$p5: 5rem;
+$p6: 6rem;
 
 // WEITERE // -------------------------------------------------------------- //
 
-$border_radius: 0.5rem;
+$border_radius: 0.8rem;
