--- a/src/app/scss/_index.scss
+++ b/src/app/scss/_index.scss
@@ -1,6 +1,7 @@
 @forward "variables";
 @forward "colors";
 @forward "mixins";
+@forward "material-adjustments";
 @forward "src/app/theme/theme";
 
 
