--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,6 @@
 <app-navigation></app-navigation>
 
-
-<button color="primary" mat-flat-button> primary</button>
-<button color="accent" mat-flat-button> accent</button>
-<button color="success" mat-flat-button> success</button>
-<button color="warn" mat-flat-button> warn</button>
-<button color="error" mat-flat-button> error</button>
-
-hahahahahah
+<app-thumbnail></app-thumbnail>
 
 
 <router-outlet></router-outlet>
