--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,1 +1,9 @@
-<button (click)="changeTheme()" color="primary" mat-flat-button> Toggle Theme</button>
+<mat-toolbar class="navbar" color="primary">
+    <span>Toolbar</span>
+
+    <nav class="nav-items">
+        <a mat-button>Home</a>
+        <a mat-button>About</a>
+        <a mat-button>Contact</a>
+    </nav>
+</mat-toolbar>
