--- a/src/app/scss/_variables.scss
+++ b/src/app/scss/_variables.scss
@@ -1,10 +1,10 @@
 // FONT SIZES // -------------------------------------------------------------- //
 
-$title: 3rem;
-$header: 2.5rem;
-$normal_text_size: 1.6rem;
-$small_text_size: 1.2rem;
-$smallest_text_size: 1rem;
+$biggest_text_size: 6rem;
+$title: 3.4rem;
+$header: 2.9rem;
+$normal_text_size: 2rem;
+$small_text_size: 1.6rem;
 
 // MARGIN + PADDING // ------------------------------------------------------- //
 
